# Hands-On-Generative-Adversarial-Networks-with-PyTorch-1.x

./: README.md
Chapter01/: simple_gan.py
Chapter02/jit/: CMakeLists.txt  mnist_jit.cpp  mnist_jit.py
Chapter02/pytorch_test/: ind-0-dim.py  pytorch_test.py
Chapter02/torchhub/: README.md  hubconf.py  mnist_hub.py
Chapter04/: dcgan.py  dcgan_test.py  utils.py
Chapter05/: build_gan.py  cgan.py  infogan.py  main.py
Chapter06/: Chapter6 - cyclegan-log.txt  pseudocode.py
Chapter06/cyclegan/: build_gan.py  cyclegan.py  datasets.py  main.py  utils.py
Chapter07/: convolution.py
Chapter08/: attack_mnist.py
Chapter08/cats_dogs/: advGAN.py  cats_dogs.py  data_utils.py  mean_std.py  model_ensemble.py  models.py  utils.py
Chapter09/text2image/: build_gan.py  gan.py  main.py  txt2image_dataset.py  utils.py
Chapter10/: seqgan terminal partial.txt
Chapter11/: build_gan.py  datasets.py  main.py  model_3dgan.py
